First version to parse, no saving besides the headerLine